# django_test

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/image/: models.py  serializers.py  views.py
backend/image/migrations/: 0001_initial.py  0002_alter_imagesmodel_image.py
docker/django/: Dockerfile
frontend/: package-lock.json
frontend/src/router/: index.js
frontend/src/views/: ImageList.vue
